[package]
name = "Saru"
version = "0.1.0"
authors = ["AndyIsCool5463 <andyl5463@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono              = "0.4.19"
serde               = { version = "1.0.126", features = ["derive"] }
serde_json          = "1.0.64"
tokio               = { version = "1.6.1", features = ["full"] }
toml                = "0.5.8"
tracing             = "0.1.26"
tracing-futures     = "0.2.5"
tracing-log         = "0.1.2"
tracing-subscriber  = "0.2.18"


[dependencies.reqwest]
version = "0.11.3"
default-features = false
features = ["json", "multipart", "stream", "rustls-tls"]

[dependencies.serenity]
version = "0.10.8"
default-features = true
features = ["collector", "unstable_discord_api", "rustls_backend"]

[dependencies.sqlx]
git = "https://github.com/launchbadge/sqlx"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid"]
